objects/CLIENT__c.object
<CustomObject>
    <fields>
        <fullName>Client_Code__c</fullName>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Client Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DEsc__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <label>Point of Contact</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CLIENT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CLIENT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLIENTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>